...
"alert.button.cancel" = "Cancel";

"loading.text" = "Please wait...";

"landing.signin.text" = "In order to start using the application, sign in first:";
"landing.title" = "Welcome!";
"landing.loginButton.title" = "Login";
"landing.registerButton.title" = "Register";
"landing.offlineModeButton.title" = "Offline Mode";

"login.title" = "Login";
"login.email.title" = "Email";
"login.password.title" = "Password";
"login.button.title" = "Login";
"login.error.title" = "Wrong credentials";
...
